--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="/inkhouse-favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <meta name="theme-color" content="#FF9B54" />
+  <meta name="theme-color" content="#FF9244" />
   <meta name="description"
     content="Merchandising agency based in Austin, TX.  Offering solutions for design, manufacturing, and distribution with small to medium businesses in mind" />
   <link rel="apple-touch-icon" href="inkhouse-apple-touch-icon.png" />
